# compose2kube

./: LICENSE  README.md  pyproject.toml
dataset/deployments_anonymized/ai-operation-process-analysis/: compose.config.yaml  compose.yaml
dataset/deployments_anonymized/ai-operation-process-analysis/act-sdk/: docker-compose.override.yml  docker-compose.yml
dataset/deployments_anonymized/ai-operation-process-analysis/mode_receive/: Dockerfile  docker-compose.yml  receive_pg.py
dataset/deployments_anonymized/ai-operation-process-analysis/postgres/: compose.yaml
dataset/deployments_anonymized/ai-operation-process-analysis/superset/: compose.yaml  entrypoint.sh
dataset/deployments_anonymized/ai-rule-editor/: compose.config.yaml  compose.yaml
dataset/deployments_anonymized/automl/: compose.config.yaml  compose.yaml
dataset/deployments_anonymized/faief/: compose.config.yaml  compose.yaml
dataset/ng_samples/: compose.input12.yaml  compose.input3.yaml  compose.input5.yaml  compose.input9.yaml
notebooks/: 20240521_figure-50samples-4o-clean.ipynb
src/compose2kube/: README.adoc  __init__.py  __main__.py  chains.py  evaluator.py  evaluator_judge.py  evaluator_test.py  llm.py  model.py  model_test.py  templates.py  test_model.py
src/compose2kube/benchmark/: benchmark.py  dataset.py  grader.py  methods.py  ngsamples.py  parser.py  test_methods.py  test_parser.py
src/compose2kube/benchmark/grader/: __init__.py  dryrun.py  judgement.py  rule.py
src/compose2kube/benchmark/methods/: __init__.py  test_methods.py
src/compose2kube/benchmark/test_manifests/: manifest_gpt35_0.yaml  manifest_gpt35_1.yaml  manifest_gpt35_10.yaml  manifest_gpt35_11.yaml  manifest_gpt35_12.yaml  manifest_gpt35_13.yaml  manifest_gpt35_14.yaml  manifest_gpt35_15.yaml  manifest_gpt35_16.yaml  manifest_gpt35_17.yaml  manifest_gpt35_18.yaml  manifest_gpt35_19.yaml  manifest_gpt35_2.yaml  manifest_gpt35_20.yaml  (+86 more)
src/evaluator/: evaluator.py  llm.py
