[tool.poetry]
name = "compose2kube"
version = "0.1.0"
description = ""
authors = ["UENO, Masaru <ueno.masaru@fujitsu.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.0"
openai = "^1.7.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
