[tool.poetry]
name = "compose2kube"
version = "0.1.0"
description = ""
authors = ["UENO, Masaru <ueno.masaru@fujitsu.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.0"
openai = "^1.7.2"
python-dotenv = "^1.0.0"
glom = "^23.5.0"
tqdm = "^4.66.1"
langchain-openai = "^0.0.2.post1"
grandalf = "^0.8"
joblib = "^1.3.2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.20.0"
ipykernel = "^6.28.0"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
bokeh = "^3.3.3"
seaborn = "^0.13.1"
langfuse = "^2.6.4"
langgraph = "^0.0.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
